# BackendSimulator

./: CMakeLists.txt  README.md  main.cpp
controller/: GameController.cpp  GameController.h
core/: CareerData.cpp  CareerData.h  CareerTypes.h  CheatEngine.cpp  CheatEngine.h  EventSystem.h  GameState.h  ProjectQueue.cpp  ProjectQueue.h  SaveManager.cpp  SaveManager.h  SkillSystem.cpp  SkillSystem.h
ui/: CommandsPanel.cpp  CommandsPanel.h  HelpPanel.cpp  HelpPanel.h  MainWindow.cpp  MainWindow.h  ProjectsPanel.cpp  ProjectsPanel.h  SkillsPanel.cpp  SkillsPanel.h  StatusPanel.cpp  StatusPanel.h  TerminalWidget.cpp  TerminalWidget.h
